fix overflowing feature details

--- a/staticRaw/assets/css/business.scss
+++ b/staticRaw/assets/css/business.scss
@@ -467,7 +467,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: $light_grey;
 
 	background-image: url("../images/encrypt_fast.png");
-	background-size: auto 100%;
+	background-size: auto 572px;
 	background-repeat: no-repeat;
 
 	@media (max-width: 880px) {
@@ -483,7 +483,15 @@ h1, h2, h3, h4, h5, h6 {
 	@media (min-width: 881px) {
 		position: absolute;
 		left: 0;
+		min-height: 572px;
+
+		padding-bottom: 1em !important;
+	}
+
+	@media (min-width: 1160px) {
+		min-height: none;
 		height: 572px;
+		padding-bottom: 0 !important;
 	}
 
 	@media (min-width: 1651px) {
